<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voice app</string>
    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Включить распознавание</string>
    <string name="stop_microphone">Остановить распознавание</string>
    <string name="preparing">Готовим распознаватель\n</string>
    <string name="ready">Готов\n</string>
    <string name="failed">Не удалось %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Можно говорить\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Пауза</string>
    <string name="continueRecognition">Продолжить</string>
    <string name="form_button" />
    <string name="text_field1" />
    <string name="text_field2" />
    <string name="RadioLayout" />
    <string name="Имя">Имя</string>
    <string name="Фамилия">Фамилия</string>
    <string name="Отчество">Отчество</string>
    <string name="Назад">Назад</string>
    <string name="form_name">Форма 1</string>
    <string name="create_form_one">форма 1</string>
    <string name="create_form_two">форма 2</string>
    <string name="settings">настройки</string>
    <string name="radiobutton1">RadioButton1</string>
    <string name="radiobutton2">RadioButton2</string>
    <string name="radiobutton3">RadioButton3</string>
    <string name="checkbox">CheckBox</string>
    <string name="checkbox2">CheckBox</string>
    <string name="checkbox3">CheckBox</string>
    <string name="voice_command_general">Голосовая команда</string>
    <string name="command_general">Команда</string>
    <string name="up_name">вверх</string>
    <string name="up_field"/>
    <string name="down_name">вниз</string>
    <string name="down_field"/>
    <string name="left_name">влево</string>
    <string name="left_field"/>
    <string name="right_name">вправо</string>
    <string name="right_field"/>
    <string name="choice_name">выбор</string>
    <string name="choice_field"/>
    <string name="value_name">значение</string>
    <string name="value_field"/>
    <string name="save_name">сохранить</string>
    <string name="save_field"/>
    <string name="cancel_name">отменить</string>
    <string name="cancel_field"/>
    <string name="yes_name">да</string>
    <string name="yes_field"/>
    <string name="no_name">нет</string>
    <string name="no_field"/>
    <string name="print_name">печать</string>
    <string name="print_field"/>

    <string name="Approve">Принять</string>


</resources>
