<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/command_general"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:text="@string/command_general"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/voice_command_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="10dp"
                android:text="@string/voice_command_general"
                android:textColor="#000000"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/up_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/up_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/up_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/up_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/down_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/down_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/down_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/down_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/left_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:text="@string/left_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/left_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/left_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/right_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:text="@string/right_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/right_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="83dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/right_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/choice_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:text="@string/choice_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/choice_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="87dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/choice_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/value_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:text="@string/value_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/value_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/value_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/save_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:text="@string/save_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/save_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/save_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:text="@string/cancel_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/cancel_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/cancel_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yes_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:text="@string/yes_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/yes_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/yes_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:text="@string/no_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/no_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="105dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/no_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/print_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="1dp"
                android:text="@string/print_name"
                android:textColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/print_name"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:layout_marginStart="87dp"
                android:layout_marginTop="1dp"
                android:autofillHints=""
                android:background="@drawable/edittextstyle"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:text="@string/print_name"
                android:textSize="14sp"
                tools:ignore="LabelFor,RtlSymmetry" />

        </LinearLayout>

        <Button
            android:id="@+id/Approve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/Approve" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>